# binny

./: Caddyfile  Makefile  Procfile  README.md  hypercorn_confg.py  hypercorn_config.py  pyproject.toml  requirements.txt  serve  servicectl  serviced  services
.github/workflows/: gql.yml
binny/: app.py  astro.py  checks.gql  globals.py
binny/deploy/: __init__.py  __main__.py  deploys.gql  status.py
binny/greeting/: README.md  __init__.py  queries.gql
etc/: binny.service  supervisord.conf  supervisord.service
