[tool.poetry]
name = "binny"
version = "0.1.0"
description = "Bot for PursuedPyBear"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.11.3"
gqlmod = "^0.8"
gqlmod-github = {version = "^0.6", extras = ["app", "async"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
