[tool.poetry]
name = "binny"
version = "0.1.0"
description = "Bot for PursuedPyBear"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.11.3"
gqlmod = "^0.8.1"
gqlmod-github = {version = "^0.6", extras = ["app", "async"]}
hypercorn = {version = "^0.9.2", extras = ["uvloop"]}
supervisor = "^4.1.0"
quart_github_webhook = "^0.3"
async_cron = "^1.6.2"
pymeeus = "^0.3.7"

[tool.poetry.dev-dependencies]
poetry = "^1.0.9"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
